# react-agent-from-scratch-in-rust

./: .gitignore  Cargo.toml  LICENSE  README-cn.md  README.md
src/: error.rs  lib.rs  main.rs  prelude.rs  tools.rs
src/agent/: base.rs  mod.rs  prompt.rs  react.rs  tool.rs
