[package]
name = "reactagent"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = "0.28.1"
async-trait = "0.1.88"
clap = { version = "4.5.39", features = ["derive"] }
colored = "3.0.0"
dotenv = "0.15.0"
reqwest = "0.12.15"
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tokio-test = "0.4.4"

[dev-dependencies]
anyhow = "1.0.98"
